Add shellcheck and bitwarden to Brewfile

--- a/scripts/install/Brewfile
+++ b/scripts/install/Brewfile
@@ -5,11 +5,13 @@ brew 'cmake'
 brew 'git'
 brew 'neovim'
 brew 'ripgrep'
+brew 'shellcheck'
 brew 'trash'
 brew 'tmux'
 brew 'tree'
 
 cask 'appcleaner'
+cask 'bitwarden'
 cask 'discord'
 cask 'google-chrome'
 cask 'iterm2'
