--- a/scripts/install/Brewfile
+++ b/scripts/install/Brewfile
@@ -3,6 +3,7 @@ tap 'homebrew/cask'
 
 brew 'cmake'
 brew 'git'
+brew 'htop'
 brew 'neovim'
 brew 'ripgrep'
 brew 'shellcheck'
@@ -13,7 +14,7 @@ brew 'tree'
 cask 'appcleaner'
 cask 'bitwarden'
 cask 'discord'
-cask 'google-chrome'
+cask 'gitup'
 cask 'iterm2'
 cask 'rectangle'
 cask 'spotify'
